2012-01-28 Pierre Wieser <pwieser@trychlos.org>

	* docs/reference/nautilus-actions-sections.txt: Update reference manual.

2012-01-27 Pierre Wieser <pwieser@trychlos.org>

	* m4/na-check-for-gdbus.m4: New file.

	* configure.ac: Updated accordingly.

	* src/api/na-dbus.h:
	* src/plugin-tracker/na-tracker-dbus.xml:
	* src/utils/nautilus-actions-run.c:
	Tracker DBus interface is renamed as
	org.nautilus_actions.DBus.Tracker.Properties1 and versioned according to
	http://0pointer.de/blog/projects/versioning-dbus.html

	* m4/na-default-io-provider.m4: Talk about items, not just actions.

	* docs/reference/na-compiling.xml: Slightly improve documentation.

	* src/core/na-core-utils.c (na_core_utils_str_subst): Fix description.

	* src/api/na-iexporter.h: Fix NAIExporterFormat description.

	* src/api/na-iexporter.h: Update interface description, including the
	list of currently allocated export format identifiers.

	* docs/export-format-id: Removed file.

	* docs/Makefile.am: Updated accordingly.

	* src/core/na-export-format.c:
	* src/core/na-export-format.h (na_export_format_new):
	* src/core/na-exporter.c:
	* src/io-desktop/nadp-formats.c:
	* src/io-desktop/nadp-writer.c:
	* src/io-desktop/nadp-writer.h:
	* src/io-xml/naxml-formats.c:
	* src/io-xml/naxml-writer.c:
	* src/io-xml/naxml-writer.h:
	Rename NAIExporterFormatExt structure as NAIExporterFormatv2.

	* docs/reference/nautilus-actions-sections.txt: Update sections.

	* src/api/na-iimporter.h:
	* src/core/na-iimporter.c: Update interface description.

	* src/io-desktop/nadp-reader.c:
	* src/io-desktop/nadp-reader.h (nadp_reader_iimporter_import_from_uri):
	* src/io-xml/naxml-reader.c:
	* src/io-xml/naxml-reader.h (naxml_reader_import_from_uri):
	Updated accordingly.

	* src/api/na-iio-provider.h: better distinguish own internal comments.

	* docs/reference/nautilus-actions-overrides.txt:
	(NAIImporterCheckFn, NAIImporterAskUserFn): Mark the typedefs as deprecated.
